updage UI. change layout

--- a/src/gui/passeratorgui.ui
+++ b/src/gui/passeratorgui.ui
@@ -11,7 +11,7 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>MainWindow</string>
+   <string>PasseratorG</string>
   </property>
   <widget class="QWidget" name="centralwidget">
    <layout class="QVBoxLayout" name="verticalLayout_2">
@@ -92,6 +92,9 @@
               <property name="minimum">
                <number>1</number>
               </property>
+              <property name="value">
+               <number>8</number>
+              </property>
              </widget>
             </item>
            </layout>
@@ -126,6 +129,9 @@
               <property name="checkable">
                <bool>true</bool>
               </property>
+              <property name="checked">
+               <bool>true</bool>
+              </property>
              </widget>
             </item>
            </layout>
@@ -156,6 +162,9 @@
              <widget class="QCheckBox" name="chkWithNumber">
               <property name="text">
                <string/>
+              </property>
+              <property name="checked">
+               <bool>true</bool>
               </property>
              </widget>
             </item>
@@ -188,6 +197,9 @@
               <property name="text">
                <string/>
               </property>
+              <property name="checked">
+               <bool>true</bool>
+              </property>
              </widget>
             </item>
            </layout>
@@ -218,6 +230,9 @@
              <widget class="QCheckBox" name="chkWithAccent">
               <property name="text">
                <string/>
+              </property>
+              <property name="checked">
+               <bool>true</bool>
               </property>
              </widget>
             </item>
@@ -250,6 +265,9 @@
               <property name="text">
                <string/>
               </property>
+              <property name="checked">
+               <bool>true</bool>
+              </property>
              </widget>
             </item>
            </layout>
@@ -280,6 +298,9 @@
              <widget class="QCheckBox" name="chkWithLowercase">
               <property name="text">
                <string/>
+              </property>
+              <property name="checked">
+               <bool>true</bool>
               </property>
              </widget>
             </item>
@@ -315,6 +336,9 @@
          <widget class="QTextEdit" name="teResult">
           <property name="readOnly">
            <bool>true</bool>
+          </property>
+          <property name="acceptRichText">
+           <bool>false</bool>
           </property>
          </widget>
         </item>
