--- a/src/gui/passeratorgui.ui
+++ b/src/gui/passeratorgui.ui
@@ -25,6 +25,7 @@
   <property name="styleSheet">
    <string notr="true">QWidget{
      background-color: qlineargradient(x1: 0, y1: 0, x2: 0, y2: 1,  stop: 0  rgb(200, 200, 200), stop: 1 rgb(166, 166, 166));
+	font: 10pt &quot;Arial&quot;;
 }
 
  QPushButton {
@@ -377,6 +378,15 @@
       </item>
       <item>
        <widget class="QPushButton" name="btGenerate">
+        <property name="font">
+         <font>
+          <family>Arial</family>
+          <pointsize>10</pointsize>
+          <weight>50</weight>
+          <italic>false</italic>
+          <bold>false</bold>
+         </font>
+        </property>
         <property name="text">
          <string>Generate</string>
         </property>
@@ -399,9 +409,12 @@
           <property name="orientation">
            <enum>Qt::Horizontal</enum>
           </property>
+          <property name="sizeType">
+           <enum>QSizePolicy::Minimum</enum>
+          </property>
           <property name="sizeHint" stdset="0">
            <size>
-            <width>40</width>
+            <width>10</width>
             <height>20</height>
            </size>
           </property>
@@ -420,6 +433,19 @@
            <widget class="QPushButton" name="btClose">
             <property name="text">
              <string>Close</string>
+            </property>
+           </widget>
+          </item>
+          <item>
+           <widget class="QLabel" name="lbLogo">
+            <property name="maximumSize">
+             <size>
+              <width>500</width>
+              <height>500</height>
+             </size>
+            </property>
+            <property name="text">
+             <string>loo</string>
             </property>
            </widget>
           </item>
